...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--TextView Appears When No Reminders -->
            <TextView
                android:id="@+id/noDataTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_no_data"
                android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
                android:gravity="center"
                android:text="@string/no_data"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--floatingActionButton To Navigate to Save Reminder Fragment   -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addReminderFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:src="@drawable/ic_add"
                app:fabSize="normal"
                app:layout_anchor="@id/reminderssRecyclerView"
...
